--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -354,7 +354,7 @@
               <label>Total factura:</label>
               <h4>{{formato(2,totales.bolivares)}}</h4>
             </div>
-            <div class="col-6 col-sm-6 col-md-6 col-lg-6" ng-if="productIndex != -1">
+            <div class="col-6 col-sm-6 col-md-6 col-lg-6" ng-show="productIndex != -1">
               <label>Nuevo Total factura:</label>
               <h4> > {{nuevoTotal(articulo.PRECIO  * articulo.CANTIDAD) }}</h4>
             </div>
