--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -356,7 +356,7 @@
             </div>
             <div class="col-6 col-sm-6 col-md-6 col-lg-6" ng-show="productIndex != -1">
               <label>Nuevo Total factura:</label>
-              <h4> > {{nuevoTotal(articulo.PRECIO  * articulo.CANTIDAD) }}</h4>
+              <h4> > {{ nuevoTotal() }}</h4>
             </div>
             
             <div class="form-group">
