--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -517,7 +517,7 @@
                 <td> 
                   <!-- <button type="button" class="btn btn-danger" ng-click="removeArt($index);">X</button> -->
                   
-                  <i class="fa fa-trash" style="cursor: pointer;"  data-toggle="modal" data-target="#showPedidoModal" ng-click="confirmModal(x.ID);"></i>
+                  <i class="fa fa-trash" style="cursor: pointer;"  data-toggle="modal" data-target="#modalConfirm" ng-click="confirmModal(x.ID);"></i>
                   <i class="fa fa-eye" style="cursor: pointer;" ng-click="getPedido(x.ID);" data-toggle="modal" data-target="#showPedidoModal" ></i>
                 </td>
                 <td><p class="text-center">{{ x.no_cia }}</p></td>
