--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -460,7 +460,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
-        <button type="button" class="btn btn-danger" ng-click="delPedido()" >Aceptar</button>
+        <button type="button" class="btn btn-danger" ng-click="delPedido()" data-dismiss="modal">Aceptar</button>
       </div>
     </div>
   </div>
