--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -482,8 +482,7 @@
       <br>
 
       <div>
-        <div class="card border-primary">
-          <img class="card-img-top" src="holder.js/100px180/" alt="">
+        <div class="card shadow-sm p-3 mb-5 bg-white rounded">
           <div class="card-body">
             <!-- <h4 class="card-title">Title</h4> -->
             
