--- a/app/comps/common/sidebar.html
+++ b/app/comps/common/sidebar.html
@@ -40,12 +40,12 @@
             Usuarios
           </a>
         </li>-->
-		<li class="nav-item" style="text-align:center;margin:0 auto;display:block;">
+		<!-- <li class="nav-item" style="text-align:center;margin:0 auto;display:block;">
           <a href="#!/clientes" class="nav-link">
             <i class="fas fa-2x fa-user text-center" style="text-align:center"></i><br>
             Clientes
           </a>
-        </li> 
+        </li>  -->
 		<li class="nav-item" style="text-align:center;margin:0 auto;display:block;">
           <a href="#!/saldo" class="nav-link">
             <i class="fas fa-2x fa-list-alt" style="text-align:center"></i><br>
