--- a/app/comps/home/home.html
+++ b/app/comps/home/home.html
@@ -14,6 +14,7 @@
 
       <br>
       <h5 class="text-center"> <strong>HOME</strong> </h5>
+      <h2 class="text-center"> <strong>{{client_info.nombre_cliente}}</strong> </h2>
       <!-- <div ng-include="'comps/common/breadcrumb.html'">
 
       </div> -->
