--- a/app/comps/saldo/saldo.html
+++ b/app/comps/saldo/saldo.html
@@ -124,15 +124,15 @@
     <div class="col-sm-12 col-md-6 col-lg-6">
       <label for="clientes">Busqueda por producto</label>
       <div class="input-group mb-3">
-        <input type="text" class="form-control" ng-keyup="getProdNew(true)" ng-model="busqueda_prod" placeholder="Busqueda por Producto" aria-label="Busqueda por Producto" aria-describedby="basic-addon2">
+        <input type="text" class="form-control"  ng-model="busqueda_prod" placeholder="Busqueda por Producto" aria-label="Busqueda por Producto" aria-describedby="basic-addon2">
         <div class="input-group-append">
-          <button class="btn btn-outline-secondary"   ng-click="getProdNew(true)" type="button">Buscar</button>
+          <button class="btn btn-outline-secondary"   ng-click="dtInstance.changeData(newPromise)" type="button">Buscar</button>
         </div>
       </div>
     
     </div>
     <div class="col-md-12">
-  <table datatable="" dt-options="dtOptions" dt-columns="dtColumns" class="table table-striped table-bordered">
+  <table datatable="" dt-options="dtOptions" dt-columns="dtColumns" dt-instance="dtInstance" class="table table-striped table-bordered">
   </table>
     </div>
 
