--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -659,7 +659,7 @@
 			<!-- <table datatable="" dt-options="dtOptions" dt-columns="dtColumns" class="table table-striped table-bordered">
       </table> -->
       
-      <table class="table">
+      <table class="table" datatable="ng" dt-options="dtOptions">
         <thead>
             <tr>
             <th scope="col">#</th>
