--- a/app/comps/common/sidebar.html
+++ b/app/comps/common/sidebar.html
@@ -6,7 +6,7 @@
           <a href="/ddo" class="nav-link">
             
             <i class="fa fa-2x fa-sign-out text-center" style="text-align:center"></i><br>
-            Salir <span class="sr-only">(current)
+            Salir <span class="sr-only">
           </a>
         </li>
         <li class="nav-item" style="text-align:center;margin:0 auto;display:block;">
