--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -571,8 +571,13 @@
     <div class="col-md-1 d-none d-sm-block" style="background:#069CDF">
       <br>
       <br>
-      <div ng-include="'comps/common/sidebar.html'">
-      </div>
+      <!-- <div ng-include="'comps/common/sidebar.html'">
+      </div> -->
+
+
+      <my-sidebar></my-sidebar>
+
+
     </div>
     <div class="col-md-11 col-sm-12">
       <br>
