--- a/app/comps/facturado/facturado.html
+++ b/app/comps/facturado/facturado.html
@@ -9,8 +9,7 @@
     <div class="col-md-1 d-none d-sm-block" style="background:#069CDF">
       <br>
       <br>
-      <div ng-include="'comps/common/sidebar.html'">
-      </div>
+      <my-sidebar></my-sidebar>
     </div>
     <div class="col-md-11 col-sm-12">
       <br>
