--- a/app/comps/sidebar/sidebar.html
+++ b/app/comps/sidebar/sidebar.html
@@ -1,7 +1,7 @@
 <div class="d-none d-sm-block">
   <nav class="sidebar text-center" style="font-size:12px;color:#000;text-decoration: none; ">
     <div class="sidebar-sticky">
-      <ul class="nav flex-column">
+      <ul class="nav ">
         <li class="nav-item" style="text-align:center;margin:0 auto;display:block;">
           <a href="/ddo" class="nav-link">
             
