--- a/app/index.html
+++ b/app/index.html
@@ -94,6 +94,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   <script type="text/javascript" src="comps/login/login.js"></script>
   <script type="text/javascript" src="comps/sidebar/sidebar.js"></script>
+  <script type="text/javascript" src="comps/clientHeader/clientHeader.js"></script>
   <script type="text/javascript" src="comps/home/home.js"></script>
   <script type="text/javascript" src="comps/deuda/deuda.js"></script>
   <script type="text/javascript" src="comps/generar/generar.min.js?v=1.0"></script>
