--- a/app/comps/deuda/deuda.html
+++ b/app/comps/deuda/deuda.html
@@ -62,7 +62,7 @@
       <h5 class="text-center"> <strong>DEUDAS </strong> </h5>
       <br>
 
-      <myclient-header></myclient-header>
+      <header-client></header-client>
 
       <div class="row">
         <div class="col-md-12">
