--- a/app/comps/saldo/saldo.html
+++ b/app/comps/saldo/saldo.html
@@ -62,7 +62,7 @@
       <br>
 
         <!-- INFO CLIENTE -->
-        <myclient-header></myclient-header>
+        <header-client></header-client>
       <!--  END INFO CLIENTE -->
 <div class="container">
   <div class="row">
