--- a/app/comps/sidebar/sidebar.html
+++ b/app/comps/sidebar/sidebar.html
@@ -34,7 +34,7 @@
           </a>
         </li>
         -->
-		 <li class="nav-item" ng-show="user.rol == 'admin'" style="text-align:center;margin:0 auto;display:block;">
+		 <li class="nav-item" ng-show="user.role == 'admin'" style="text-align:center;margin:0 auto;display:block;">
           <a href="#!/usuarios" class="nav-link">
             <i class="fas fa-2x fa-user text-center" style="text-align:center"></i><br>
             Usuarios
