--- a/app/comps/sidebar/sidebar.html
+++ b/app/comps/sidebar/sidebar.html
@@ -1,7 +1,7 @@
 
 
 
-<a id="show-sidebar" class="btn btn-sm btn-dark" href="#">
+<a id="show-sidebar" ng-click="showSidebar()" class="btn btn-sm btn-dark" href="#">
   <i class="fas fa-bars"></i>
 </a>
 <nav id="sidebar" class="sidebar-wrapper">
