--- a/app/comps/sidebar/sidebar.html
+++ b/app/comps/sidebar/sidebar.html
@@ -1,6 +1,7 @@
 <div id="sidebar-wrapper">
 <ul id="sidebar_menu" class="sidebar-nav">
-     <li class="sidebar-brand"><a id="menu-toggle" ng-click="showSidebar()" >Menu<span id="main_icon" class="glyphicon glyphicon-align-justify"></span></a></li>
+     <li class="sidebar-brand" ng-show="!side"  ><a id="menu-toggle" ng-click="showSidebar()" >Menu<span id="main_icon" class="glyphicon glyphicon-align-justify"></span></a></li>
+     <li class="sidebar-brand" ng-show="side"  ><a id="menu-toggle" ng-click="hideSidebar()" >Menu<span id="main_icon" class="glyphicon glyphicon-align-justify"></span></a></li>
 </ul>
   <ul class="sidebar-nav" id="sidebar">
     <li><a>Link1<span class="sub_icon glyphicon glyphicon-link"></span></a></li>
