--- a/app/comps/sidebar/sidebar.html
+++ b/app/comps/sidebar/sidebar.html
@@ -6,5 +6,11 @@
   <ul class="sidebar-nav" id="sidebar">
     <li><a>Link1<span class="sub_icon glyphicon glyphicon-link"></span></a></li>
     <li><a>link2<span class="sub_icon glyphicon glyphicon-link"></span></a></li>
+    <li class="nav-item" style="text-align:center;margin:0 auto;display:block;">
+      <a href="#!/home" class="nav-link">
+        <i class="fas fa-2x fa-home text-center" style="text-align:center"></i><br>
+        Home <span class="sr-only">(current)
+      </a>
+    </li>
   </ul>
 </div>
