--- a/app/comps/sidebar/sidebar.html
+++ b/app/comps/sidebar/sidebar.html
@@ -9,7 +9,7 @@
     <li class="nav-item" >
       Home
       <a href="#!/home" class="nav-link">
-        <i class="fas fa-2x fa-home text-center" style="text-align:center"></i>
+        <i class="fas fa-home text-center" style="text-align:center"></i>
       </a>
     </li>
   </ul>
