--- a/app/comps/sidebar/sidebar.html
+++ b/app/comps/sidebar/sidebar.html
@@ -5,61 +5,61 @@
 </ul>
   <ul class="sidebar-nav" id="sidebar">
     <li class="nav-item" >
-      <a href="#!/home" class="nav-link">
+      <a href="#!/home" class="">
         Home
         <i class="fas fa-home" style="text-align:center"></i>
       </a>
     </li>
     <li class="nav-item" >
-      <a href="#!/deuda" class="nav-link">
+      <a href="#!/deuda" class="">
         Deuda
         <i class="fas fa-receipt" style="text-align:center"></i>
       </a>
     </li>
     <li class="nav-item" ng-show="user.role == 'admin'" >
-      <a href="#!/generar" class="nav-link">
+      <a href="#!/generar" class="">
         Generar
         <i class="fas fa-shopping-basket" style="text-align:center"></i>
       </a>
     </li>
     <li class="nav-item" ng-show="user.role == 'admin'"  >
-      <a href="#!/consulta" class="nav-link">
+      <a href="#!/consulta" class="">
         Consultar
         <i class="fas fa-list-alt" style="text-align:center"></i>
       </a>
     </li>
     <li class="nav-item" ng-show="user.role == 'admin'"  >
-      <a href="#!/usuarios" class="nav-link">
+      <a href="#!/usuarios" class="">
         Usuarios
         <i class="fas fa-user" style="text-align:center"></i>
       </a>
     </li>
     <li class="nav-item" ng-show="user.role == 'admin'"  >
-      <a href="#!/clientes" class="nav-link">
+      <a href="#!/clientes" class="">
         Clientes
         <i class="fas fa-user" style="text-align:center"></i>
       </a>
     </li>
     <li class="nav-item" >
-      <a href="#!/saldo" class="nav-link">
+      <a href="#!/saldo" class="">
         Productos
         <i class="fas fa-list-alt" style="text-align:center"></i>
       </a>
     </li>
     <li class="nav-item" >
-      <a href="#!/pedidos" class="nav-link">
+      <a href="#!/pedidos" class="">
         Pedidos
         <i class="fas fa-list-alt" style="text-align:center"></i>
       </a>
     </li>
     <li class="nav-item" >
-      <a href="#!/facturado" class="nav-link">
+      <a href="#!/facturado" class="">
         Facturas
         <i class="fas fa-list-alt" style="text-align:center"></i>
       </a>
     </li>
     <li class="nav-item"  ng-show="user.role == 'admin'"  >
-      <a href="#!/config" class="nav-link">
+      <a href="#!/config" class="">
         Config
         <i class="fas fa-cog" style="text-align:center"></i>
       </a>
