--- a/app/comps/sidebar/sidebar.html
+++ b/app/comps/sidebar/sidebar.html
@@ -1,7 +1,7 @@
 <div id="sidebar-wrapper">
 <ul id="sidebar_menu" class="sidebar-nav">
-     <li class="sidebar-brand" ng-show="!side"  ><a id="menu-toggle" ng-click="showSidebar()" >Menu<i class="sub_icon fas fa-bars" style="text-align:center"></i></a></li>
-     <li class="sidebar-brand" ng-show="side"  ><a id="menu-toggle" ng-click="hideSidebar()" >Menu<i class="sub_icon fas fa-bars" style="text-align:center"></i></a></li>
+     <li class="sidebar-brand" ng-show="!side"  ><a id="menu-toggle" ng-click="showSidebar()" >Menu<i class="main_icon fas fa-bars" style="text-align:center"></i></a></li>
+     <li class="sidebar-brand" ng-show="side"  ><a id="menu-toggle" ng-click="hideSidebar()" >Menu<i class="main_icon fas fa-bars" style="text-align:center"></i></a></li>
 </ul>
   <ul class="sidebar-nav" id="sidebar">
     <li class="nav-item" >
