--- a/app/comps/saldo/saldo.html
+++ b/app/comps/saldo/saldo.html
@@ -25,13 +25,13 @@
 
                     <div class="row pb-5 pt-1 p-5">
                         <div class="col-md-12">
-                            <p class="mb-1"> <span style="font-size: 1.3rem;font-weight: bold;">Bodega</span>  :  {{saldo.bodega}} </p>                                                   
-							<p class="mb-1"> <span style="font-size: 1.3rem;font-weight: bold;">Número articulo</span>  :  {{saldo.no_arti}} </p>                                                  
-							<p class="mb-1"> <span style="font-size: 1.3rem;font-weight: bold;">Número lote</span>  :  {{saldo.no_lote}} </p>                                                  
-							<p class="mb-1"> <span style="font-size: 1.3rem;font-weight: bold;">Costo lote</span>  :  {{saldo.costouni_lote}} </p>                                                  
-							<p class="mb-1"> <span style="font-size: 1.3rem;font-weight: bold;">Fecha entrada</span>  :  {{saldo.fecha_entrada}} </p>                                                  
-							<p class="mb-1"> <span style="font-size: 1.3rem;font-weight: bold;">Fecha vence</span>  :  {{saldo.fecha_vence}} </p>                                                
-						
+                            <p class="mb-1"> <span style="font-size: 1.3rem;font-weight: bold;">Bodega</span>  :  {{saldo.bodega}} </p>
+							<p class="mb-1"> <span style="font-size: 1.3rem;font-weight: bold;">Número articulo</span>  :  {{saldo.no_arti}} </p>
+							<p class="mb-1"> <span style="font-size: 1.3rem;font-weight: bold;">Número lote</span>  :  {{saldo.no_lote}} </p>
+							<p class="mb-1"> <span style="font-size: 1.3rem;font-weight: bold;">Costo lote</span>  :  {{saldo.costouni_lote}} </p>
+							<p class="mb-1"> <span style="font-size: 1.3rem;font-weight: bold;">Fecha entrada</span>  :  {{saldo.fecha_entrada}} </p>
+							<p class="mb-1"> <span style="font-size: 1.3rem;font-weight: bold;">Fecha vence</span>  :  {{saldo.fecha_vence}} </p>
+
 						</div>
                 </div>
             </div>
@@ -46,54 +46,52 @@
 </div>
 </div>
 
+<div id="wrapper" class="active">
+  <my-sidebar></my-sidebar>
+  <div id="page-content-wrapper"  class="container-fluid">
+    <div class="row" style="min-height:80vh">
 
-<div class="container-fluid">
-  <div class="row" style="min-height:80vh">
+      <div class="col-md-11 col-sm-12">
+        <br>
+        <!--<h5 class="text-center"> <strong>SALDO DE CLIENTES</strong> </h5>-->
+  	  <h5 class="text-center"> <strong>PRODUCTOS</strong> </h5>
+        <br>
 
-    <div class="col-md-1 d-none d-sm-block" style="background:#069CDF">
-      <br>
-      <br>
-      <my-sidebar></my-sidebar>
-    </div>
-    <div class="col-md-11 col-sm-12">
-      <br>
-      <!--<h5 class="text-center"> <strong>SALDO DE CLIENTES</strong> </h5>-->
-	  <h5 class="text-center"> <strong>PRODUCTOS</strong> </h5>
-      <br>
-
-        <!-- INFO CLIENTE -->
-        <header-client></header-client>
-      <!--  END INFO CLIENTE -->
-<div class="container">
-  <div class="row">
-    <div class="col-sm-12 col-md-6 col-lg-6">
-      <label for="clientes">Busqueda por producto</label>
-      <div class="input-group mb-3">
-        <input type="text" class="form-control"  ng-model="busqueda_prod" placeholder="Busqueda por Producto" aria-label="Busqueda por Producto" aria-describedby="basic-addon2">
-        <div class="input-group-append">
-          <button class="btn btn-outline-secondary"   ng-click="dtInstance.changeData(newPromise)" type="button">Buscar</button>
+          <!-- INFO CLIENTE -->
+          <header-client></header-client>
+        <!--  END INFO CLIENTE -->
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12 col-md-6 col-lg-6">
+        <label for="clientes">Busqueda por producto</label>
+        <div class="input-group mb-3">
+          <input type="text" class="form-control"  ng-model="busqueda_prod" placeholder="Busqueda por Producto" aria-label="Busqueda por Producto" aria-describedby="basic-addon2">
+          <div class="input-group-append">
+            <button class="btn btn-outline-secondary"   ng-click="dtInstance.changeData(newPromise)" type="button">Buscar</button>
+          </div>
         </div>
+
       </div>
-    
+      <div class="col-md-12">
+    <table datatable="" dt-options="dtOptions" dt-columns="dtColumns" dt-instance="dtInstance" class="table table-striped table-bordered">
+    </table>
+      </div>
+
     </div>
-    <div class="col-md-12">
-  <table datatable="" dt-options="dtOptions" dt-columns="dtColumns" dt-instance="dtInstance" class="table table-striped table-bordered">
-  </table>
+  </div>
+
+
+      </div>
     </div>
+
+
 
   </div>
 </div>
+<div class="row">
+  <div class="col-md-12">
+    <div ng-include="'comps/common/footer.html'">
 
-
-    </div>
-  </div>
-	
-
-  <div class="row">
-    <div class="col-md-12">
-      <div ng-include="'comps/common/footer.html'">
-
-      </div>
     </div>
   </div>
 </div>
