--- a/app/comps/sidebar/sidebar.html
+++ b/app/comps/sidebar/sidebar.html
@@ -5,6 +5,12 @@
 </ul>
   <ul class="sidebar-nav" id="sidebar">
     <li class="nav-item" >
+      <a href="/ddo" class="">
+        Salir
+        <i class="sub_icon fas fa-home" style="text-align:center"></i>
+      </a>
+    </li>
+    <li class="nav-item" >
       <a href="#!/home" class="">
         Home
         <i class="sub_icon fas fa-home" style="text-align:center"></i>
