--- a/app/comps/usuarios/usuarios.html
+++ b/app/comps/usuarios/usuarios.html
@@ -83,18 +83,17 @@
           <div class="row pb-2 p-2">
               <div class="col-md-6">
                   <p class="font-weight-bold mb-4">Client Information</p>
-                  <p class="mb-1">John Doe, Mrs Emma Downson</p>
-                  <p>Acme Inc</p>
-                  <p class="mb-1">Berlin, Germany</p>
+                  <p class="mb-1" style="text-transform: capitalize;" >{{x.nombre_cliente}}</p>
+                  <!-- <p>Acme Inc</p> -->
+                  <p class="mb-1">{{x.direccion_cliente}}</p>
                   <p class="mb-1">6781 45P</p>
               </div>
 
               <div class="col-md-6 text-right">
-                  <p class="font-weight-bold mb-4">Payment Details</p>
-                  <p class="mb-1"><span class="text-muted">VAT: </span> 1425782</p>
-                  <p class="mb-1"><span class="text-muted">VAT ID: </span> 10253642</p>
-                  <p class="mb-1"><span class="text-muted">Payment Type: </span> Root</p>
-                  <p class="mb-1"><span class="text-muted">Name: </span> John Doe</p>
+                  <p class="font-weight-bold mb-4">Details</p>
+                  <p class="mb-1"><span class="text-muted">Identificacion: </span> {{x.docu_identif_cliente}}</p>
+                  <p class="mb-1"><span class="text-muted">Codigo: </span> {{x.cod_cliente}}</p>
+                  <p class="mb-1"><span class="text-muted">Encargado: </span> {{x.nombre_encargado}}</p>
               </div>
           </div>
 
