--- a/app/comps/usuarios/usuarios.html
+++ b/app/comps/usuarios/usuarios.html
@@ -80,7 +80,7 @@
             </div>
           </div>
 
-          <div class="row pb-2 p-2" ng-if="">
+          <div class="row pb-2 p-2" ng-if="client">
               <div class="col-md-6">
                   <p class="font-weight-bold mb-4">Informacion del Cliente </p>
                   <p class="mb-1" style="text-transform: capitalize;" >{{client.nombre_cliente}}</p>
