--- a/app/comps/usuarios/usuarios.html
+++ b/app/comps/usuarios/usuarios.html
@@ -93,7 +93,7 @@
                   <p class="font-weight-bold mb-4">Detalles</p>
                   <p class="mb-1"><span class="text-muted">Identificacion: </span> {{client.docu_identif_cliente}}</p>
                   <p class="mb-1"><span class="text-muted">Codigo: </span> {{client.cod_cliente}}</p>
-                  <p class="mb-1"><span class="text-muted">Encargado: </span> {{client.nombre_encargado.toLowerCase()}}</p>
+                  <p class="mb-1" style="text-transform: capitalize;"><span class="text-muted">Encargado: </span> {{client.nombre_encargado.toLowerCase()}}</p>
               </div>
           </div>
 
