--- a/app/comps/usuarios/usuarios.html
+++ b/app/comps/usuarios/usuarios.html
@@ -105,7 +105,7 @@
             <label>Nombre</label>
             <input type="text" ng-model="user.name" class="form-control" placeholder="Nombre">
           </div>
-          <div class="form-group" ng-if="!hasClient" >
+          <div class="form-group" ng-if="!hasClient && !client" >
             <label>Tipo de usuario</label>
             <!--<input type="text" ng-model="user_view.role" class="form-control" placeholder="Tipo de usuario">-->
             <select class="form-control form-control-sm" ng-model="user.role">
