--- a/app/comps/usuarios/usuarios.html
+++ b/app/comps/usuarios/usuarios.html
@@ -118,7 +118,10 @@
           </div>
           <div class="form-group">
             <label>Username</label>
-            <input type="text" ng-model="user.username" class="form-control" placeholder="Username">
+            <input type="text" ng-model="user.username"  ng-onchange="availableUser()" class="form-control" placeholder="Username">
+            <div class="invalid-feedback">
+              Please provide a valid zip.
+            </div>
           </div>
 
 
