--- a/app/comps/clientes/clientes.html
+++ b/app/comps/clientes/clientes.html
@@ -25,15 +25,15 @@
 
                     <div class="row pb-5 pt-1 p-5">
                         <div class="col-md-12">
-                            <p class="mb-1"> <span style="font-size: 1.3rem;font-weight: bold;">Nombre de cliente</span>  :  {{deuda.nombre_cliente}} </p>                                                   
-							<p class="mb-1"> <span style="font-size: 1.3rem;font-weight: bold;">Tipo de pago</span>  :  {{deuda.tipo_pago}} </p>                                                  
-							<p class="mb-1"> <span style="font-size: 1.3rem;font-weight: bold;">Fecha de vencimiento</span>  :  {{deuda.fecha_vencimiento}} </p>                                                  
-							<p class="mb-1"> <span style="font-size: 1.3rem;font-weight: bold;">Monto inicial</span>  :  {{deuda.monto_inicial}} </p>                                                  
-							<p class="mb-1"> <span style="font-size: 1.3rem;font-weight: bold;">Monto actual</span>  :  {{deuda.monto_actual}} </p>                                                  
-							<p class="mb-1"> <span style="font-size: 1.3rem;font-weight: bold;">Fecha de ultimo pago</span>  :  {{deuda.fecha_ultimo_pago}} </p>                                                  
-							<p class="mb-1"> <span style="font-size: 1.3rem;font-weight: bold;">Monto de ultimo pago</span>  :  {{deuda.monto_ultimo_pago}} </p>                                                 
-							<p class="mb-1"> <span style="font-size: 1.3rem;font-weight: bold;">Estatus de deuda</span>  :  {{deuda.estatus_deuda}} </p>                                                 
-						
+                            <p class="mb-1"> <span style="font-size: 1.3rem;font-weight: bold;">Nombre de cliente</span>  :  {{deuda.nombre_cliente}} </p>
+							<p class="mb-1"> <span style="font-size: 1.3rem;font-weight: bold;">Tipo de pago</span>  :  {{deuda.tipo_pago}} </p>
+							<p class="mb-1"> <span style="font-size: 1.3rem;font-weight: bold;">Fecha de vencimiento</span>  :  {{deuda.fecha_vencimiento}} </p>
+							<p class="mb-1"> <span style="font-size: 1.3rem;font-weight: bold;">Monto inicial</span>  :  {{deuda.monto_inicial}} </p>
+							<p class="mb-1"> <span style="font-size: 1.3rem;font-weight: bold;">Monto actual</span>  :  {{deuda.monto_actual}} </p>
+							<p class="mb-1"> <span style="font-size: 1.3rem;font-weight: bold;">Fecha de ultimo pago</span>  :  {{deuda.fecha_ultimo_pago}} </p>
+							<p class="mb-1"> <span style="font-size: 1.3rem;font-weight: bold;">Monto de ultimo pago</span>  :  {{deuda.monto_ultimo_pago}} </p>
+							<p class="mb-1"> <span style="font-size: 1.3rem;font-weight: bold;">Estatus de deuda</span>  :  {{deuda.estatus_deuda}} </p>
+
 						</div>
                 </div>
             </div>
@@ -48,15 +48,12 @@
 </div>
 </div>
 
+<div id="wrapper" class="active">
 
-<div class="container-fluid">
+  <my-sidebar></my-sidebar>
+<div  id="page-content-wrapper" class="container-fluid">
   <div class="row" style="min-height:80vh">
 
-    <div class="col-md-1 d-none d-sm-block" style="background:#069CDF">
-      <br>
-      <br>
-      <my-sidebar></my-sidebar>
-    </div>
     <div class="col-md-11 col-sm-12">
       <br>
       <h5 class="text-center"> <strong>CLIENTES</strong> </h5>
@@ -117,12 +114,13 @@
     </div>
   </div>
 
-  <div class="row">
-    <div class="col-md-12">
-      <div ng-include="'comps/common/footer.html'">
 
-      </div>
+</div>
+</div>
+<div class="row">
+  <div class="col-md-12">
+    <div ng-include="'comps/common/footer.html'">
+
     </div>
   </div>
-</div>
 </div>
