--- a/app/comps/sidebar/sidebar.html
+++ b/app/comps/sidebar/sidebar.html
@@ -22,7 +22,7 @@
         <i class="sub_icon fas fa-receipt" style="text-align:center"></i>
       </a>
     </li>
-    <li class="nav-item" ng-show="user.role == 'admin'" >
+    <!-- <li class="nav-item" ng-show="user.role == 'admin'" >
       <a href="#!/generar" class="">
         Generar
         <i class="sub_icon fas fa-shopping-basket" style="text-align:center"></i>
@@ -33,7 +33,7 @@
         Consultar
         <i class="sub_icon fas fa-list-alt" style="text-align:center"></i>
       </a>
-    </li>
+    </li>-->
     <li class="nav-item" ng-show="user.role == 'admin'"  >
       <a href="#!/usuarios" class="">
         Usuarios
@@ -58,17 +58,17 @@
         <i class="sub_icon fas fa-list-alt" style="text-align:center"></i>
       </a>
     </li>
-    <li class="nav-item" >
+    <!-- <li class="nav-item" >
       <a href="#!/facturado" class="">
         Facturas
         <i class="sub_icon fas fa-list-alt" style="text-align:center"></i>
       </a>
-    </li>
-    <li class="nav-item"  ng-show="user.role == 'admin'"  >
+    </li> -->
+    <!-- <li class="nav-item"  ng-show="user.role == 'admin'"  >
       <a href="#!/config" class="">
         Config
         <i class="sub_icon fas fa-cog" style="text-align:center"></i>
       </a>
-    </li>
+    </li> -->
   </ul>
 </div>
