--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -41,8 +41,6 @@
                       </select>
                     </div>
                   </div>
-
-
                 </div>
 
               <div class="row">
@@ -476,7 +474,7 @@
           <tbody>
 
               <tr ng-repeat="x in listaPedidos">
-                  <th scope="row">{{ $index + 1 }}</td>
+                  <th scope="row">{{ $index + 1 }}</th>
                   <td><p class="text-center">{{ x.no_cia }}</p></td>
                   <td><p class="text-center">{{ x.grupo }}</p></td>
                   <td><p class="text-center">{{ x.no_cliente }}</p></td>
