--- a/app/comps/clientHeader/clientHeader.html
+++ b/app/comps/clientHeader/clientHeader.html
@@ -1,4 +1,4 @@
-<div class="container" ng-show="hasClient">
+<div class="container" ng-show="hasUserClient">
 
     <!-- <form class="needs-validation" >
     <div class="form-row">
