--- a/app/comps/saldo/saldo.html
+++ b/app/comps/saldo/saldo.html
@@ -63,7 +63,7 @@
 
   <div class="container">
 
-    <div ng-show="!hasClient">
+    <div ng-show="!hasUserClient">
       <div class="row">
         <div class="col-sm-12 col-md-6 col-lg-6">
           <label for="clientes">Busqueda por cliente</label>
