--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -21,7 +21,7 @@
 
             <div class="container">
 
-              <div ng-show="!hasClient">
+              <div ng-show="!hasUserClient">
                 <div class="row">
                   <div class="col-sm-12 col-md-6 col-lg-6">
                     <label for="clientes">Busqueda por cliente</label>
@@ -230,7 +230,7 @@
 
           <div class="container">
 
-            <div ng-show="!hasClient">
+            <div ng-show="!hasUserClient">
 
             <div class="row">
               <div class="col-sm-12 col-md-4 col-lg-4">
