--- a/app/comps/usuarios/usuarios.html
+++ b/app/comps/usuarios/usuarios.html
@@ -59,8 +59,20 @@
         </button>
       </div>
       <div class="modal-body">
+      <form>
+        <div class="form-group" ng-if="!hasUserClient" >
+          <label>Tipo de usuario</label>
+          <!--<input type="text" ng-model="user_view.role" class="form-control" placeholder="Tipo de usuario">-->
+          <select class="form-control form-control-sm" ng-model="user.role">
 
-        <div class="row">
+            <option ng-repeat="type in type_user" value="{{type.type}}">
+              {{type.type | uppercase}}
+            </option>
+            <option value="" disabled selected>Selecciona un tipo de usuario</option>
+          </select>
+        </div>
+
+        <div class="row" ng-if="!hasUserClient">
           <div class="col-sm-12 col-md-6 col-lg-6">
             <label for="clientes">Busqueda por cliente</label>
             <div class="input-group mb-3">
@@ -99,23 +111,13 @@
 
 
         </div>
-        <form>
+
 
           <div class="form-group">
             <label>Nombre</label>
             <input type="text" ng-model="user.name" class="form-control" placeholder="Nombre">
           </div>
-          <div class="form-group" ng-if="!hasUserClient && !client" >
-            <label>Tipo de usuario</label>
-            <!--<input type="text" ng-model="user_view.role" class="form-control" placeholder="Tipo de usuario">-->
-            <select class="form-control form-control-sm" ng-model="user.role">
 
-              <option ng-repeat="type in type_user" value="{{type.type}}">
-                {{type.type | uppercase}}
-              </option>
-              <option value="" disabled selected>Selecciona un tipo de usuario</option>
-            </select>
-          </div>
           <div class="form-group">
             <label>Username</label>
             <input type="text" ng-model="user.username"  ng-keyup="availableUser()" class="form-control" placeholder="Username">
