--- a/app/comps/sidebar/sidebar.html
+++ b/app/comps/sidebar/sidebar.html
@@ -5,12 +5,6 @@
 </ul>
   <ul class="sidebar-nav" id="sidebar">
     <li class="nav-item" >
-      <a href="/ddo" class="">
-        Salir
-        <i class="sub_icon fas fa-home" style="text-align:center"></i>
-      </a>
-    </li>
-    <li class="nav-item" >
       <a href="#!/home" class="">
         Home
         <i class="sub_icon fas fa-home" style="text-align:center"></i>
@@ -70,5 +64,11 @@
         <i class="sub_icon fas fa-cog" style="text-align:center"></i>
       </a>
     </li> -->
+    <li class="nav-item" >
+      <a href="/ddo" class="">
+        Salir
+        <i class="sub_icon fa fa-times" style="text-align:center"></i>
+      </a>
+    </li>
   </ul>
 </div>
